Fixed text overflow issue on small screens

--- a/src/components/about.css
+++ b/src/components/about.css
@@ -15,6 +15,7 @@ width: 80%;
   padding: 30px;
   outline: 2px solid #f4b955;
   margin: 50px;
+  overflow: scroll;
 }
 
 .section3 {
